--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,12 @@
+@inproceedings{heafield-etal-2021-findings,
+  title={Findings of the {WMT} 2021 Shared Task on Efficient Translation},
+  author={Heafield, Kenneth and Zhu, Qianqian and Grundkiewicz, Roman},
+  bootktitle={Proceedings of the Sixth Conference on Machine Translation},
+  month=nov,
+  year={2021},
+  address="Online",
+  publisher="Association for Computational Linguistics"}
+
 @misc{qian2021volctrans,
       title={The Volctrans GLAT System: Non-autoregressive Translation Meets WMT21},
       author={Lihua Qian and Yi Zhou and Zaixiang Zheng and Yaoming Zhu and Zehui Lin and Jiangtao Feng and Shanbo Cheng and Lei Li and Mingxuan Wang and Hao Zhou},
