added wmt21 evaluation and tables

--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -804,7 +804,8 @@ languages, data augmentation methods, namely \emph{backtranslation} are used
 to create bigger data and therefore to improve the model performance.
 
 Backtranslation is a simple technique for incorporating target-side monolingual
-data in a \ac{nmt} model \citep{sennrich-etal-2016-improving}. For a given
+data in a translation model
+\citep{bojar-tamchyna-2011-improving,sennrich-etal-2016-improving}. For a given
 translation direction, we first translate the monolingual data from the target
 language to the source language using a previously trained model. Then, we mix
 the synthetic source-language data along with the authentic target-language
