--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -14,8 +14,10 @@
 \newacronym{bleu}{BLEU}{bilingual evaluation understudy}
 \newacronym{bon}{BoN}{bag-of-ngrams}
 \newacronym{bpe}{BPE}{byte-pair encoding}
+\newacronym{chrf}{ChrF}{character F-score}
 \newacronym{cmlm}{CMLM}{conditional masked language model}
 \newacronym{cnn}{CNN}{convolutional neural network}
+\newacronym{comet}{COMET}{Crosslingual Optimized Metric for Evaluation of Translation}
 \newacronym{crf}{CRF}{conditional random fields}
 \newacronym{ctc}{CTC}{connectionist temporal classification}
 \newacronym{em}{EM}{expectation-maximization}
