--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -1,5 +1,5 @@
 
-* evaluation of autoregressive and non-autoregressive models on WMT 21
+* Translation Quality on WMT 21 test set
 
   |-------------------+---------------------------+---------------------------------------+------------|
   | Model             | En -> De                  |                                       |            |
@@ -47,8 +47,10 @@
   | Tiny              | 55.1 / 56.4 = 55.8 | -0.1785 / -0.1815 = -0.1800 | 34.2 @ 1.3 |
   |-------------------+--------------------+-----------------------------+------------|
 
-
-
   ** Teacher ensembles
   ~/wmt21/teachers
   ~/wmt21/efficiency
+
+
+
+* Translation on WMT 14
